# router/userRoute.js
@@ -2,22 +2,30 @@
 const express = require("express");
 const { requireSignin ,canEditDeletePost,isHost} = require("../midleware/auth");
 const router = express.Router();
+const {checkAdmin} =require("../midleware/admin")
 const {
     addFavoritelist,
     removeFavoritelist,
     bookProperty,
     checkAvailability,
     getCurrentUser,
-    bookPropertyForTest,
-    UserBooklist
+    UserBooklist,
+    paymentSuccess ,
+    paymentFail,
+    favoritelist
 } = require("../controlar/user.js");
 
 router.put("/favoriteslist-list/:id",requireSignin,addFavoritelist)
 router.put("/unfavoriteslist-list/:id",requireSignin,removeFavoritelist)
-router.post('/book/:id', requireSignin,bookProperty);
-router.post('/book-test/:id',bookPropertyForTest);
+router.post('/book-property/:id', requireSignin,bookProperty);
 
 router.get("/check-available/:id",requireSignin,checkAvailability);
+// public user 
 router.get("/get-single-user/:id",requireSignin,getCurrentUser);
-router.get("/user-booking-list",requireSignin,UserBooklist)
+router.get("/user-favoriteslist/:id",requireSignin,favoritelist)
+// 
+router.get("/user-booking-list",requireSignin,UserBooklist);
+router.put("/payment-success",requireSignin,paymentSuccess);
+router.put("/fail-payment",requireSignin,paymentFail)
+
 module.exports = router;
